# robotic-hackaton

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: console_orchestrazione_robot_b00dd443.plan.md  hackathon_robot_mvp_3a5d0e76.plan.md  robot_activation_cyberwave_8cd8cd7b.plan.md  webui_keyboard_shortcuts_9ee86c6f.plan.md
.cursor/rules/: chain-of-verification.mdc  docs-first.mdc  no-auto-commit.mdc
cyberwave_workers/: safeground_can_color_triage.py
docs/: commands.md  hackathon-mvp-requirements.md  physical_setup_activities.md  robot-sensors-research.md  robot_connection_guide.md  robot_movement_capability_map.md  safeground_mvp_requirements.md  safeground_p0_development_plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  api.ts  runtimePresets.ts  style.css  types.ts  useKeyboardShortcuts.ts
frontend/src/components/: BaseMovementPanel.vue  RiskMap.vue  (+14 more)
live_vision/: .gitignore  README.md  cv_safeground.py  cw_vision.py  discover_robot.py  headless.py  hsv_tune.py  llm_test.py  risk_map.py  verify_compat.py  verify_workflow.py  vision.py
presentation/: safeground_pitch.pptx
safeground/: __init__.py  adapters.py  agents.py  cli.py  cv.py  cyberwave_replay.py  env.py  event_store.py  mission.py  models.py  mqtt_bridge.py  safety.py
safeground/api/: __init__.py  server.py
safeground/services/: __init__.py  cyberwave_movement_feed.py  live_vision_worker.py  orchestrator_service.py
safeground/voice/: __init__.py  whisper.py
scripts/: replay_cyberwave_recording.py
tests/: test_safeground_p0.py
(+8 files in other folders)
